--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ python = "^3.6"
 importlib-metadata = {version = "^1.5.0", python = "<3.8"}
 typer = "^0.1.1"
 colorama = "^0.4.3"
+toml = "^0.10.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.3.2"
