--- a/mypy.ini
+++ b/mypy.ini
@@ -3,5 +3,5 @@ check_untyped_defs = True
 no_implicit_optional = True
 
 
-[mypy-nox.*,pytest,typer.*]
+[mypy-nox.*,pytest,pytest_mock,typer.*]
 ignore_missing_imports = True
