--- a/pyproject.toml
+++ b/pyproject.toml
@@ -44,6 +44,7 @@ recommonmark = "^0.6.0"
 pep8-naming = "^0.9.1"
 flake8-rst-docstrings = "^0.0.13"
 pytest-mock = "^3.0.0"
+rope = "^0.16.0"
 
 [tool.poetry.scripts]
 dressup = "dressup.console:app"
