--- a/.github/workflows/pre-commit.yml
+++ b/.github/workflows/pre-commit.yml
@@ -15,17 +15,17 @@ jobs:
       - name: set PYTHON_VERSION_HASH
         run: |
           echo "::set-env name=PYTHON_VERSION_HASH::$(python -c '
-            import hashlib
-            import sys
+          import hashlib
+          import sys
 
-            payload = sys.version.encode() + sys.executable.encode()
-            digest = hashlib.sha256(payload).hexdigest()
+          payload = sys.version.encode() + sys.executable.encode()
+          digest = hashlib.sha256(payload).hexdigest()
 
-            print(digest)
+          print(digest)
           ')"
       - uses: actions/cache@v1
         with:
           path: ~/.cache/pre-commit
-          key: pre-commit-{% raw %}${{ env.PYTHON_VERSION_HASH }}-${{ hashFiles('.pre-commit-config.yaml') }}{% endraw %}
-      - run: poetry install
+          key: pre-commit-${{ env.PYTHON_VERSION_HASH }}-${{ hashFiles('.pre-commit-config.yaml') }}
+      - run: poetry install --ansi
       - run: pre-commit run --all-files --show-diff-on-failure --color=always
