--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -11,5 +11,5 @@ jobs:
           architecture: x64
       - run: pip install nox==2019.11.9
       - run: pip install poetry==1.0.5
-      - run: nox --sessions tests-3.8 coverage
+      - run: nox --force-color --sessions tests-3.8 coverage
       - uses: codecov/codecov-action@v1
