--- a/src/dressup/translator.toml
+++ b/src/dressup/translator.toml
@@ -1,30 +1,4 @@
-[circled]
-a = "ⓐ"
-b = "ⓑ"
-c = "ⓒ"
-d = "ⓓ"
-e = "ⓔ"
-f = "ⓕ"
-g = "ⓖ"
-h = "ⓗ"
-i = "ⓘ"
-j = "ⓙ"
-k = "ⓚ"
-l = "ⓛ"
-m = "ⓜ"
-n = "ⓝ"
-o = "ⓞ"
-p = "ⓟ"
-q = "ⓠ"
-r = "ⓡ"
-s = "ⓢ"
-t = "ⓣ"
-u = "ⓤ"
-v = "ⓥ"
-w = "ⓦ"
-x = "ⓧ"
-y = "ⓨ"
-z = "ⓩ"
+[circle]
 1 = "①"
 2 = "②"
 3 = "③"
@@ -34,33 +8,1217 @@ z = "ⓩ"
 7 = "⑦"
 8 = "⑧"
 9 = "⑨"
-0 = "0"
+- = "⊖"
+"=" = "⊜"
+q = "ⓠ"
+w = "ⓦ"
+e = "ⓔ"
+r = "ⓡ"
+t = "ⓣ"
+y = "ⓨ"
+u = "ⓤ"
+i = "ⓘ"
+o = "ⓞ"
+p = "ⓟ"
+"\" = "⦸"
+a = "ⓐ"
+s = "ⓢ"
+d = "ⓓ"
+f = "ⓕ"
+g = "ⓖ"
+h = "ⓗ"
+j = "ⓙ"
+k = "ⓚ"
+l = "ⓛ"
+z = "ⓩ"
+x = "ⓧ"
+c = "ⓒ"
+v = "ⓥ"
+b = "ⓑ"
+n = "ⓝ"
+m = "ⓜ"
+"." = "⨀"
+"/" = "⊘"
+"*" = "⊛"
+"+" = "⊕"
+Q = "Ⓠ"
+W = "Ⓦ"
+E = "Ⓔ"
+R = "Ⓡ"
+T = "Ⓣ"
+Y = "Ⓨ"
+U = "Ⓤ"
+I = "Ⓘ"
+O = "Ⓞ"
+P = "Ⓟ"
+"|" = "⦶"
+A = "Ⓐ"
+S = "Ⓢ"
+D = "Ⓓ"
+F = "Ⓕ"
+G = "Ⓖ"
+H = "Ⓗ"
+J = "Ⓙ"
+K = "Ⓚ"
+L = "Ⓛ"
+Z = "Ⓩ"
+X = "Ⓧ"
+C = "Ⓒ"
+V = "Ⓥ"
+B = "Ⓑ"
+N = "Ⓝ"
+M = "Ⓜ"
+"<" = "⧀"
+">" = "⧁"
 
-["negative circled"]
-a = "🅐"
-b = "🅑"
-c = "🅒"
-d = "🅓"
-e = "🅔"
-f = "🅕"
-g = "🅖"
-h = "🅗"
-i = "🅘"
-j = "🅙"
-k = "🅚"
-l = "🅛"
-m = "🅜"
-n = "🅝"
-o = "🅞"
-p = "🅟"
-q = "🅠"
-r = "🅡"
-s = "🅢"
-t = "🅣"
-u = "🅤"
-v = "🅥"
-w = "🅦"
-x = "🅧"
-y = "🅨"
-z = "🅩"
+[negative_circle]
 0 = "⓿"
+Q = "🅠"
+W = "🅦"
+E = "🅔"
+R = "🅡"
+T = "🅣"
+Y = "🅨"
+U = "🅤"
+I = "🅘"
+O = "🅞"
+P = "🅟"
+A = "🅐"
+S = "🅢"
+D = "🅓"
+F = "🅕"
+G = "🅖"
+H = "🅗"
+J = "🅙"
+K = "🅚"
+L = "🅛"
+Z = "🅩"
+X = "🅧"
+C = "🅒"
+V = "🅥"
+B = "🅑"
+N = "🅝"
+M = "🅜"
+
+[monospace]
+"`" = "｀"
+1 = "１"
+2 = "２"
+3 = "３"
+4 = "４"
+5 = "５"
+6 = "６"
+7 = "７"
+8 = "８"
+9 = "９"
+0 = "０"
+- = "－"
+"=" = "＝"
+q = "ｑ"
+w = "ｗ"
+e = "ｅ"
+r = "ｒ"
+t = "ｔ"
+y = "ｙ"
+u = "ｕ"
+i = "ｉ"
+o = "ｏ"
+p = "ｐ"
+"[" = "［"
+"]" = "］"
+"\" = "＼"
+a = "ａ"
+s = "ｓ"
+d = "ｄ"
+f = "ｆ"
+g = "ｇ"
+h = "ｈ"
+j = "ｊ"
+k = "ｋ"
+l = "ｌ"
+";" = "；"
+"'" = "＇"
+z = "ｚ"
+x = "ｘ"
+c = "ｃ"
+v = "ｖ"
+b = "ｂ"
+n = "ｎ"
+m = "ｍ"
+"," = "，"
+"." = "．"
+"/" = "／"
+"~" = "～"
+"!" = "！"
+"@" = "＠"
+"#" = "＃"
+"$" = "＄"
+"%" = "％"
+"^" = "＾"
+"&" = "＆"
+"*" = "＊"
+"(" = "（"
+")" = "）"
+_ = "＿"
+"+" = "＋"
+Q = "Ｑ"
+W = "Ｗ"
+E = "Ｅ"
+R = "Ｒ"
+T = "Ｔ"
+Y = "Ｙ"
+U = "Ｕ"
+I = "Ｉ"
+O = "Ｏ"
+P = "Ｐ"
+"{" = "｛"
+"}" = "｝"
+"|" = "｜"
+A = "Ａ"
+S = "Ｓ"
+D = "Ｄ"
+F = "Ｆ"
+G = "Ｇ"
+H = "Ｈ"
+J = "Ｊ"
+K = "Ｋ"
+L = "Ｌ"
+":" = "："
+Z = "Ｚ"
+X = "Ｘ"
+C = "Ｃ"
+V = "Ｖ"
+B = "Ｂ"
+N = "Ｎ"
+M = "Ｍ"
+"?" = "？"
+
+[math_bold]
+1 = "𝟏"
+2 = "𝟐"
+3 = "𝟑"
+4 = "𝟒"
+5 = "𝟓"
+6 = "𝟔"
+7 = "𝟕"
+8 = "𝟖"
+9 = "𝟗"
+0 = "𝟎"
+q = "𝐪"
+w = "𝐰"
+e = "𝐞"
+r = "𝐫"
+t = "𝐭"
+y = "𝐲"
+u = "𝐮"
+i = "𝐢"
+o = "𝐨"
+p = "𝐩"
+a = "𝐚"
+s = "𝐬"
+d = "𝐝"
+f = "𝐟"
+g = "𝐠"
+h = "𝐡"
+j = "𝐣"
+k = "𝐤"
+l = "𝐥"
+z = "𝐳"
+x = "𝐱"
+c = "𝐜"
+v = "𝐯"
+b = "𝐛"
+n = "𝐧"
+m = "𝐦"
+Q = "𝐐"
+W = "𝐖"
+E = "𝐄"
+R = "𝐑"
+T = "𝐓"
+Y = "𝐘"
+U = "𝐔"
+I = "𝐈"
+O = "𝐎"
+P = "𝐏"
+A = "𝐀"
+S = "𝐒"
+D = "𝐃"
+F = "𝐅"
+G = "𝐆"
+H = "𝐇"
+J = "𝐉"
+K = "𝐊"
+L = "𝐋"
+Z = "𝐙"
+X = "𝐗"
+C = "𝐂"
+V = "𝐕"
+B = "𝐁"
+N = "𝐍"
+M = "𝐌"
+
+[math_bold_fraktur]
+q = "𝖖"
+w = "𝖜"
+e = "𝖊"
+r = "𝖗"
+t = "𝖙"
+y = "𝖞"
+u = "𝖚"
+i = "𝖎"
+o = "𝖔"
+p = "𝖕"
+a = "𝖆"
+s = "𝖘"
+d = "𝖉"
+f = "𝖋"
+g = "𝖌"
+h = "𝖍"
+j = "𝖏"
+k = "𝖐"
+l = "𝖑"
+z = "𝖟"
+x = "𝖝"
+c = "𝖈"
+v = "𝖛"
+b = "𝖇"
+n = "𝖓"
+m = "𝖒"
+Q = "𝕼"
+W = "𝖂"
+E = "𝕰"
+R = "𝕽"
+T = "𝕿"
+Y = "𝖄"
+U = "𝖀"
+I = "𝕴"
+O = "𝕺"
+P = "𝕻"
+A = "𝕬"
+S = "𝕾"
+D = "𝕯"
+F = "𝕱"
+G = "𝕲"
+H = "𝕳"
+J = "𝕵"
+K = "𝕶"
+L = "𝕷"
+Z = "𝖅"
+X = "𝖃"
+C = "𝕮"
+V = "𝖁"
+B = "𝕭"
+N = "𝕹"
+M = "𝕸"
+
+[math_bold_italic]
+q = "𝒒"
+w = "𝒘"
+e = "𝒆"
+r = "𝒓"
+t = "𝒕"
+y = "𝒚"
+u = "𝒖"
+i = "𝒊"
+o = "𝒐"
+p = "𝒑"
+a = "𝒂"
+s = "𝒔"
+d = "𝒅"
+f = "𝒇"
+g = "𝒈"
+h = "𝒉"
+j = "𝒋"
+k = "𝒌"
+l = "𝒍"
+z = "𝒛"
+x = "𝒙"
+c = "𝒄"
+v = "𝒗"
+b = "𝒃"
+n = "𝒏"
+m = "𝒎"
+Q = "𝑸"
+W = "𝑾"
+E = "𝑬"
+R = "𝑹"
+T = "𝑻"
+Y = "𝒀"
+U = "𝑼"
+I = "𝑰"
+O = "𝑶"
+P = "𝑷"
+A = "𝑨"
+S = "𝑺"
+D = "𝑫"
+F = "𝑭"
+G = "𝑮"
+H = "𝑯"
+J = "𝑱"
+K = "𝑲"
+L = "𝑳"
+Z = "𝒁"
+X = "𝑿"
+C = "𝑪"
+V = "𝑽"
+B = "𝑩"
+N = "𝑵"
+M = "𝑴"
+
+[math_bold_script]
+q = "𝓺"
+w = "𝔀"
+e = "𝓮"
+r = "𝓻"
+t = "𝓽"
+y = "𝔂"
+u = "𝓾"
+i = "𝓲"
+o = "𝓸"
+p = "𝓹"
+a = "𝓪"
+s = "𝓼"
+d = "𝓭"
+f = "𝓯"
+g = "𝓰"
+h = "𝓱"
+j = "𝓳"
+k = "𝓴"
+l = "𝓵"
+z = "𝔃"
+x = "𝔁"
+c = "𝓬"
+v = "𝓿"
+b = "𝓫"
+n = "𝓷"
+m = "𝓶"
+Q = "𝓠"
+W = "𝓦"
+E = "𝓔"
+R = "𝓡"
+T = "𝓣"
+Y = "𝓨"
+U = "𝓤"
+I = "𝓘"
+O = "𝓞"
+P = "𝓟"
+A = "𝓐"
+S = "𝓢"
+D = "𝓓"
+F = "𝓕"
+G = "𝓖"
+H = "𝓗"
+J = "𝓙"
+K = "𝓚"
+L = "𝓛"
+Z = "𝓩"
+X = "𝓧"
+C = "𝓒"
+V = "𝓥"
+B = "𝓑"
+N = "𝓝"
+M = "𝓜"
+
+[math_double_struck]
+1 = "𝟙"
+2 = "𝟚"
+3 = "𝟛"
+4 = "𝟜"
+5 = "𝟝"
+6 = "𝟞"
+7 = "𝟟"
+8 = "𝟠"
+9 = "𝟡"
+0 = "𝟘"
+q = "𝕢"
+w = "𝕨"
+e = "𝕖"
+r = "𝕣"
+t = "𝕥"
+y = "𝕪"
+u = "𝕦"
+i = "𝕚"
+o = "𝕠"
+p = "𝕡"
+a = "𝕒"
+s = "𝕤"
+d = "𝕕"
+f = "𝕗"
+g = "𝕘"
+h = "𝕙"
+j = "𝕛"
+k = "𝕜"
+l = "𝕝"
+z = "𝕫"
+x = "𝕩"
+c = "𝕔"
+v = "𝕧"
+b = "𝕓"
+n = "𝕟"
+m = "𝕞"
+Q = "ℚ"
+W = "𝕎"
+E = "𝔼"
+R = "ℝ"
+T = "𝕋"
+Y = "𝕐"
+U = "𝕌"
+I = "𝕀"
+O = "𝕆"
+P = "ℙ"
+A = "𝔸"
+S = "𝕊"
+D = "𝔻"
+F = "𝔽"
+G = "𝔾"
+H = "ℍ"
+J = "𝕁"
+K = "𝕂"
+L = "𝕃"
+Z = "ℤ"
+X = "𝕏"
+C = "ℂ"
+V = "𝕍"
+B = "𝔹"
+N = "ℕ"
+M = "𝕄"
+
+[math_monospace]
+1 = "𝟷"
+2 = "𝟸"
+3 = "𝟹"
+4 = "𝟺"
+5 = "𝟻"
+6 = "𝟼"
+7 = "𝟽"
+8 = "𝟾"
+9 = "𝟿"
+0 = "𝟶"
+q = "𝚚"
+w = "𝚠"
+e = "𝚎"
+r = "𝚛"
+t = "𝚝"
+y = "𝚢"
+u = "𝚞"
+i = "𝚒"
+o = "𝚘"
+p = "𝚙"
+a = "𝚊"
+s = "𝚜"
+d = "𝚍"
+f = "𝚏"
+g = "𝚐"
+h = "𝚑"
+j = "𝚓"
+k = "𝚔"
+l = "𝚕"
+z = "𝚣"
+x = "𝚡"
+c = "𝚌"
+v = "𝚟"
+b = "𝚋"
+n = "𝚗"
+m = "𝚖"
+Q = "𝚀"
+W = "𝚆"
+E = "𝙴"
+R = "𝚁"
+T = "𝚃"
+Y = "𝚈"
+U = "𝚄"
+I = "𝙸"
+O = "𝙾"
+P = "𝙿"
+A = "𝙰"
+S = "𝚂"
+D = "𝙳"
+F = "𝙵"
+G = "𝙶"
+H = "𝙷"
+J = "𝙹"
+K = "𝙺"
+L = "𝙻"
+Z = "𝚉"
+X = "𝚇"
+C = "𝙲"
+V = "𝚅"
+B = "𝙱"
+N = "𝙽"
+M = "𝙼"
+
+[math_sans]
+1 = "𝟣"
+2 = "𝟤"
+3 = "𝟥"
+4 = "𝟦"
+5 = "𝟧"
+6 = "𝟨"
+7 = "𝟩"
+8 = "𝟪"
+9 = "𝟫"
+0 = "𝟢"
+q = "𝗊"
+w = "𝗐"
+e = "𝖾"
+r = "𝗋"
+t = "𝗍"
+y = "𝗒"
+u = "𝗎"
+i = "𝗂"
+o = "𝗈"
+p = "𝗉"
+a = "𝖺"
+s = "𝗌"
+d = "𝖽"
+f = "𝖿"
+g = "𝗀"
+h = "𝗁"
+j = "𝗃"
+k = "𝗄"
+l = "𝗅"
+z = "𝗓"
+x = "𝗑"
+c = "𝖼"
+v = "𝗏"
+b = "𝖻"
+n = "𝗇"
+m = "𝗆"
+Q = "𝖰"
+W = "𝖶"
+E = "𝖤"
+R = "𝖱"
+T = "𝖳"
+Y = "𝖸"
+U = "𝖴"
+I = "𝖨"
+O = "𝖮"
+P = "𝖯"
+A = "𝖠"
+S = "𝖲"
+D = "𝖣"
+F = "𝖥"
+G = "𝖦"
+H = "𝖧"
+J = "𝖩"
+K = "𝖪"
+L = "𝖫"
+Z = "𝖹"
+X = "𝖷"
+C = "𝖢"
+V = "𝖵"
+B = "𝖡"
+N = "𝖭"
+M = "𝖬"
+
+[math_sans_bold]
+1 = "𝟭"
+2 = "𝟮"
+3 = "𝟯"
+4 = "𝟰"
+5 = "𝟱"
+6 = "𝟲"
+7 = "𝟳"
+8 = "𝟴"
+9 = "𝟵"
+0 = "𝟬"
+q = "𝗾"
+w = "𝘄"
+e = "𝗲"
+r = "𝗿"
+t = "𝘁"
+y = "𝘆"
+u = "𝘂"
+i = "𝗶"
+o = "𝗼"
+p = "𝗽"
+a = "𝗮"
+s = "𝘀"
+d = "𝗱"
+f = "𝗳"
+g = "𝗴"
+h = "𝗵"
+j = "𝗷"
+k = "𝗸"
+l = "𝗹"
+z = "𝘇"
+x = "𝘅"
+c = "𝗰"
+v = "𝘃"
+b = "𝗯"
+n = "𝗻"
+m = "𝗺"
+Q = "𝗤"
+W = "𝗪"
+E = "𝗘"
+R = "𝗥"
+T = "𝗧"
+Y = "𝗬"
+U = "𝗨"
+I = "𝗜"
+O = "𝗢"
+P = "𝗣"
+A = "𝗔"
+S = "𝗦"
+D = "𝗗"
+F = "𝗙"
+G = "𝗚"
+H = "𝗛"
+J = "𝗝"
+K = "𝗞"
+L = "𝗟"
+Z = "𝗭"
+X = "𝗫"
+C = "𝗖"
+V = "𝗩"
+B = "𝗕"
+N = "𝗡"
+M = "𝗠"
+
+[math_sans_bold_italic]
+q = "𝙦"
+w = "𝙬"
+e = "𝙚"
+r = "𝙧"
+t = "𝙩"
+y = "𝙮"
+u = "𝙪"
+i = "𝙞"
+o = "𝙤"
+p = "𝙥"
+a = "𝙖"
+s = "𝙨"
+d = "𝙙"
+f = "𝙛"
+g = "𝙜"
+h = "𝙝"
+j = "𝙟"
+k = "𝙠"
+l = "𝙡"
+z = "𝙯"
+x = "𝙭"
+c = "𝙘"
+v = "𝙫"
+b = "𝙗"
+n = "𝙣"
+m = "𝙢"
+Q = "𝙌"
+W = "𝙒"
+E = "𝙀"
+R = "𝙍"
+T = "𝙏"
+Y = "𝙔"
+U = "𝙐"
+I = "𝙄"
+O = "𝙊"
+P = "𝙋"
+A = "𝘼"
+S = "𝙎"
+D = "𝘿"
+F = "𝙁"
+G = "𝙂"
+H = "𝙃"
+J = "𝙅"
+K = "𝙆"
+L = "𝙇"
+Z = "𝙕"
+X = "𝙓"
+C = "𝘾"
+V = "𝙑"
+B = "𝘽"
+N = "𝙉"
+M = "𝙈"
+
+[math_sans_italic]
+q = "𝘲"
+w = "𝘸"
+e = "𝘦"
+r = "𝘳"
+t = "𝘵"
+y = "𝘺"
+u = "𝘶"
+i = "𝘪"
+o = "𝘰"
+p = "𝘱"
+a = "𝘢"
+s = "𝘴"
+d = "𝘥"
+f = "𝘧"
+g = "𝘨"
+h = "𝘩"
+j = "𝘫"
+k = "𝘬"
+l = "𝘭"
+z = "𝘻"
+x = "𝘹"
+c = "𝘤"
+v = "𝘷"
+b = "𝘣"
+n = "𝘯"
+m = "𝘮"
+Q = "𝘘"
+W = "𝘞"
+E = "𝘌"
+R = "𝘙"
+T = "𝘛"
+Y = "𝘠"
+U = "𝘜"
+I = "𝘐"
+O = "𝘖"
+P = "𝘗"
+A = "𝘈"
+S = "𝘚"
+D = "𝘋"
+F = "𝘍"
+G = "𝘎"
+H = "𝘏"
+J = "𝘑"
+K = "𝘒"
+L = "𝘓"
+Z = "𝘡"
+X = "𝘟"
+C = "𝘊"
+V = "𝘝"
+B = "𝘉"
+N = "𝘕"
+M = "𝘔"
+
+[parenthesized]
+1 = "⑴"
+2 = "⑵"
+3 = "⑶"
+4 = "⑷"
+5 = "⑸"
+6 = "⑹"
+7 = "⑺"
+8 = "⑻"
+9 = "⑼"
+q = "⒬"
+w = "⒲"
+e = "⒠"
+r = "⒭"
+t = "⒯"
+y = "⒴"
+u = "⒰"
+i = "⒤"
+o = "⒪"
+p = "⒫"
+a = "⒜"
+s = "⒮"
+d = "⒟"
+f = "⒡"
+g = "⒢"
+h = "⒣"
+j = "⒥"
+k = "⒦"
+l = "⒧"
+z = "⒵"
+x = "⒳"
+c = "⒞"
+v = "⒱"
+b = "⒝"
+n = "⒩"
+m = "⒨"
+
+[square]
+- = "⊟"
+"\" = "⧅"
+"." = "⊡"
+"/" = "⧄"
+"*" = "⧆"
+"+" = "⊞"
+Q = "🅀"
+W = "🅆"
+E = "🄴"
+R = "🅁"
+T = "🅃"
+Y = "🅈"
+U = "🅄"
+I = "🄸"
+O = "🄾"
+P = "🄿"
+A = "🄰"
+S = "🅂"
+D = "🄳"
+F = "🄵"
+G = "🄶"
+H = "🄷"
+J = "🄹"
+K = "🄺"
+L = "🄻"
+Z = "🅉"
+X = "🅇"
+C = "🄲"
+V = "🅅"
+B = "🄱"
+N = "🄽"
+M = "🄼"
+
+[negative_square]
+Q = "🆀"
+W = "🆆"
+E = "🅴"
+R = "🆁"
+T = "🆃"
+Y = "🆈"
+U = "🆄"
+I = "🅸"
+O = "🅾"
+P = "🅿"
+A = "🅰"
+S = "🆂"
+D = "🅳"
+F = "🅵"
+G = "🅶"
+H = "🅷"
+J = "🅹"
+K = "🅺"
+L = "🅻"
+Z = "🆉"
+X = "🆇"
+C = "🅲"
+V = "🆅"
+B = "🅱"
+N = "🅽"
+M = "🅼"
+
+[cute]
+w = "ẃ"
+e = "é"
+r = "ŕ"
+y = "ӳ"
+u = "ú"
+i = "í"
+o = "ő"
+p = "ṕ"
+a = "á"
+s = "ś"
+g = "ǵ"
+k = "ḱ"
+l = "ĺ"
+z = "ź"
+c = "ć"
+n = "ń"
+m = "ḿ"
+W = "Ẃ"
+E = "É"
+R = "Ŕ"
+Y = "Ӳ"
+U = "Ű"
+O = "Ő"
+P = "Ṕ"
+A = "Á"
+G = "Ǵ"
+K = "Ḱ"
+L = "Ĺ"
+Z = "Ź"
+C = "Ć"
+N = "Ń"
+M = "Ḿ"
+
+[math_fraktur]
+q = "𝔮"
+w = "𝔴"
+e = "𝔢"
+r = "𝔯"
+t = "𝔱"
+y = "𝔶"
+u = "𝔲"
+i = "𝔦"
+o = "𝔬"
+p = "𝔭"
+a = "𝔞"
+s = "𝔰"
+d = "𝔡"
+f = "𝔣"
+g = "𝔤"
+h = "𝔥"
+j = "𝔧"
+k = "𝔨"
+l = "𝔩"
+z = "𝔷"
+x = "𝔵"
+c = "𝔠"
+v = "𝔳"
+b = "𝔟"
+n = "𝔫"
+m = "𝔪"
+Q = "𝔔"
+W = "𝔚"
+E = "𝔈"
+R = "ℜ"
+T = "𝔗"
+Y = "𝔜"
+U = "𝔘"
+I = "ℑ"
+O = "𝔒"
+P = "𝔓"
+A = "𝔄"
+S = "𝔖"
+D = "𝔇"
+F = "𝔉"
+G = "𝔊"
+H = "ℌ"
+J = "𝔍"
+K = "𝔎"
+L = "𝔏"
+Z = "ℨ"
+X = "𝔛"
+C = "ℭ"
+V = "𝔙"
+B = "𝔅"
+N = "𝔑"
+M = "𝔐"
+
+[rock_dots]
+3 = "ӟ"
+- = "⸚"
+w = "ẅ"
+e = "ë"
+r = "ṛ"
+t = "ẗ"
+y = "ÿ"
+u = "ü"
+i = "ï"
+o = "ö"
+p = "ṗ"
+a = "ä"
+s = "ṡ"
+d = "ḋ"
+f = "ḟ"
+g = "ġ"
+h = "ḧ"
+k = "ḳ"
+l = "ḷ"
+z = "ż"
+x = "ẍ"
+c = "ċ"
+v = "ṿ"
+b = "ḅ"
+n = "ṅ"
+m = "ṁ"
+"." = "∵"
+W = "Ẅ"
+E = "Ё"
+R = "Ṛ"
+T = "Ṫ"
+Y = "Ÿ"
+U = "Ü"
+I = "Ї"
+O = "Ö"
+P = "Ṗ"
+A = "Ä"
+S = "Ṡ"
+D = "Ḋ"
+F = "Ḟ"
+G = "Ġ"
+H = "Ḧ"
+K = "Ḳ"
+L = "Ḷ"
+Z = "Ż"
+X = "Ẍ"
+C = "Ċ"
+V = "Ṿ"
+B = "Ḅ"
+N = "Ṅ"
+M = "Ṁ"
+
+[small_caps]
+w = "ᴡ"
+e = "ᴇ"
+r = "ʀ"
+t = "ᴛ"
+u = "ᴜ"
+i = "ɪ"
+o = "ᴏ"
+p = "ᴩ"
+a = "ᴀ"
+s = "ꜱ"
+d = "ᴅ"
+f = "ꜰ"
+g = "ɢ"
+h = "ʜ"
+j = "ᴊ"
+k = "ᴋ"
+l = "ʟ"
+z = "ᴢ"
+c = "ᴄ"
+v = "ᴠ"
+b = "ʙ"
+n = "ɴ"
+m = "ᴍ"
+
+[stroked]
+2 = "ƻ"
+q = "ꝗ"
+e = "ɇ"
+r = "ɍ"
+t = "ŧ"
+y = "ɏ"
+u = "ᵾ"
+i = "ɨ"
+o = "ø"
+p = "ᵽ"
+d = "đ"
+g = "ǥ"
+h = "ħ"
+j = "ɉ"
+k = "ꝁ"
+l = "ł"
+z = "ƶ"
+c = "ȼ"
+b = "ƀ"
+Q = "Ꝗ"
+E = "Ɇ"
+R = "Ɍ"
+T = "Ŧ"
+Y = "Ɏ"
+I = "Ɨ"
+O = "Ø"
+P = "Ᵽ"
+A = "Ⱥ"
+D = "Đ"
+G = "Ǥ"
+H = "Ħ"
+J = "Ɉ"
+K = "Ꝁ"
+L = "Ł"
+Z = "Ƶ"
+C = "Ȼ"
+B = "Ƀ"
+
+[subscript]
+1 = "₁"
+2 = "₂"
+3 = "₃"
+4 = "₄"
+5 = "₅"
+6 = "₆"
+7 = "₇"
+8 = "₈"
+9 = "₉"
+0 = "₀"
+e = "ₑ"
+r = "ᵣ"
+t = "ₜ"
+u = "ᵤ"
+i = "ᵢ"
+o = "ₒ"
+p = "ₚ"
+a = "ₐ"
+s = "ₛ"
+h = "ₕ"
+j = "ⱼ"
+k = "ₖ"
+l = "ₗ"
+x = "ₓ"
+v = "ᵥ"
+n = "ₙ"
+m = "ₘ"
+
+[superscript]
+1 = "¹"
+2 = "²"
+3 = "³"
+4 = "⁴"
+5 = "⁵"
+6 = "⁶"
+7 = "⁷"
+8 = "⁸"
+9 = "⁹"
+0 = "⁰"
+w = "ʷ"
+e = "ᵉ"
+r = "ʳ"
+t = "ᵗ"
+y = "ʸ"
+u = "ᵘ"
+i = "ⁱ"
+o = "ᵒ"
+p = "ᵖ"
+a = "ᵃ"
+s = "ˢ"
+d = "ᵈ"
+f = "ᶠ"
+g = "ᵍ"
+h = "ʰ"
+j = "ʲ"
+k = "ᵏ"
+l = "ˡ"
+z = "ᶻ"
+x = "ˣ"
+c = "ᶜ"
+v = "ᵛ"
+b = "ᵇ"
+n = "ⁿ"
+m = "ᵐ"
+W = "ᵂ"
+E = "ᴱ"
+R = "ᴿ"
+T = "ᵀ"
+U = "ᵁ"
+I = "ᴵ"
+O = "ᴼ"
+P = "ᴾ"
+A = "ᴬ"
+D = "ᴰ"
+G = "ᴳ"
+H = "ᴴ"
+J = "ᴶ"
+K = "ᴷ"
+L = "ᴸ"
+V = "ⱽ"
+B = "ᴮ"
+N = "ᴺ"
+M = "ᴹ"
+
+[inverted]
+q = "b"
+w = "ʍ"
+e = "ǝ"
+r = "ɹ"
+t = "ʇ"
+y = "ʎ"
+u = "n"
+i = "ı"
+p = "d"
+a = "ɐ"
+d = "p"
+f = "ɟ"
+g = "ƃ"
+h = "ɥ"
+j = "ɾ"
+k = "ʞ"
+l = "ן"
+"'" = ","
+c = "ɔ"
+v = "ʌ"
+b = "q"
+n = "u"
+m = "ɯ"
+"," = "‘"
+"!" = "¡"
+"&" = "⅋"
+V = "𐌡"
+"?" = "¿"
+
+[reversed]
+1 = "߁"
+q = "p"
+e = "ɘ"
+p = "q"
+s = "ꙅ"
+d = "b"
+";" = "⁏"
+c = "ↄ"
+b = "d"
+"~" = "∽"
+E = "Ǝ"
+R = "ᴙ"
+P = "ꟼ"
+S = "Ꙅ"
+F = "ꟻ"
+L = "⅃"
+C = "Ↄ"
+N = "ᴎ"
+"?" = "⸮"
