Ignore .DS_Store

--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,12 @@
-/.vscode/
-/.coverage
-/.mypy_cache/
-/.nox/
-/.python-version
-/.pytype/
-/htmlcov/
-/dist/
-/docs/_build/
-/src/*.egg-info/
 __pycache__/
+/src/*.egg-info/
+/htmlcov/
+/docs/_build/
+/dist/
+/.vscode/
+/.pytype/
+/.python-version
+/.nox/
+/.mypy_cache/
+/.coverage
+.DS_Store
