--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,13 +39,13 @@ flake8-docstrings = "^1.5.0"
 darglint = "^1.1.2"
 xdoctest = "^0.11.0"
 sphinx = "^3.0.2"
-sphinx-autodoc-typehints = "^1.10.3"
 recommonmark = "^0.6.0"
 pep8-naming = "^0.10.0"
 flake8-rst-docstrings = "^0.0.13"
 pytest-mock = "^3.1.0"
 rope = "^0.16.0"
 sphinx-theme-material = "^1.1.2"
+sphinx-autobuild = "^0.7.1"
 
 [tool.poetry.scripts]
 dressup = "dressup.console:app"
