--- a/pyproject.toml
+++ b/pyproject.toml
@@ -44,8 +44,8 @@ pep8-naming = "^0.10.0"
 flake8-rst-docstrings = "^0.0.13"
 pytest-mock = "^3.1.0"
 rope = "^0.16.0"
-sphinx-theme-material = "^1.1.2"
 sphinx-autobuild = "^0.7.1"
+sphinx-material = "^0.0.26"
 
 [tool.poetry.scripts]
 dressup = "dressup.console:app"
