--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ importlib-metadata = {version = "^1.5.0", python = "<3.8"}
 typer = ">=0.1.1,<0.3.0"
 colorama = "^0.4.3"
 toml = "^0.10.1"
+rich = "^1.2.2"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.4.2"
