--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,42 +14,44 @@ include = ["dressup/translator.toml"]
 Changelog = "https://github.com/pscosta5/dressup/releases"
 
 [tool.poetry.dependencies]
-python = "^3.6"
-importlib-metadata = {version = "^1.5.0", python = "<3.8"}
-typer = "^0.3.0"
-colorama = "^0.4.3"
-toml = "^0.10.1"
-rich = ">=1.2.2,<8.0.0"
+python = ">=3.8.1,<3.11"
+importlib-metadata = "^5.1.0"
+typer = "^0.7.0"
+colorama = "^0.4.6"
+toml = "^0.10.2"
+rich = "^12.6.0"
 
 [tool.poetry.dev-dependencies]
-pytest = "^6.1.0"
-coverage = {extras = ["toml"], version = "^5.2"}
-pytest-cov = "^2.10.0"
-flake8 = "^3.8.3"
-black = "^19.10b0"
-flake8-black = "^0.2.0"
-flake8-import-order = "^0.18.1"
-flake8-bugbear = "^20.1.2"
-flake8-bandit = "^2.1.2"
-safety = "^1.9.0"
-mypy = "^0.782"
-pytype = {version = "^2020.6.26", python = ">=3.6,<3.8"}
-flake8-annotations = "^2.0.0"
-typeguard = "^2.9.1"
-flake8-docstrings = "^1.5.0"
-darglint = "^1.5.1"
-xdoctest = "^0.13.0"
-sphinx = "^3.1.1"
-recommonmark = "^0.6.0"
-pep8-naming = "^0.11.1"
-flake8-rst-docstrings = "^0.0.13"
-pytest-mock = "^3.1.1"
-rope = "^0.17.0"
-sphinx-autobuild = "^0.7.1"
-sphinx-material = "^0.0.30"
 
 [tool.poetry.scripts]
 dressup = "dressup.console:app"
+
+[tool.poetry.group.dev.dependencies]
+pytest = "^7.2.0"
+coverage = {extras = ["toml"], version = "^6.5.0"}
+pytest-cov = "^4.0.0"
+flake8 = "^6.0.0"
+black = "^22.10.0"
+flake8-black = "^0.3.5"
+flake8-import-order = "^0.18.2"
+flake8-bugbear = "^22.10.27"
+flake8-bandit = "^4.1.1"
+safety = "^2.3.2"
+mypy = "^0.991"
+pytype = "^2022.11.18"
+flake8-annotations = "^2.9.1"
+typeguard = "^2.13.3"
+flake8-docstrings = "^1.6.0"
+darglint = "^1.8.1"
+xdoctest = "^1.1.0"
+sphinx = "^5.3.0"
+recommonmark = "^0.7.1"
+pep8-naming = "^0.13.2"
+flake8-rst-docstrings = "^0.3.0"
+pytest-mock = "^3.10.0"
+rope = "^1.5.1"
+sphinx-autobuild = "^2021.3.14"
+sphinx-material = "^0.0.35"
 
 [tool.coverage.paths]
 source = ["src", "*/site-packages"]
