Update old files to new lint rules

--- a/mypy.ini
+++ b/mypy.ini
@@ -3,5 +3,5 @@ check_untyped_defs = True
 no_implicit_optional = True
 
 
-[mypy-nox.*,pytest,pytest_mock,rich.*,typer.*]
+[mypy-nox.*,pytest,pytest_mock,rich.*,typer.*,toml]
 ignore_missing_imports = True
