--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,7 +13,7 @@ jobs:
           architecture: x64
       - run: pip install nox==2022.11.21
       - run: pip install poetry==1.2.2
-      - run: nox --force-color
+      - run: nox --force-color --python=3.10
       - run: poetry build --ansi
       - uses: pypa/gh-action-pypi-publish@v1.5.1
         with:
